Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,22 +12,25 @@ pool:
 steps:
 - task: AzureFileCopy@4
   inputs:
-    SourcePath: 'templates'
-    azureSubscription: 'copy-connection'
+    SourcePath: 'CreateWebAppThroughCopy'
+    azureSubscription: 'Azurepipeline-conn'
     Destination: 'AzureBlob'
-    storage: 'demostorage'
+    storage: 'bhaskarstg'
     ContainerName: 'projecttemplates'
   name: AzureFileCopy
+  
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
     deploymentScope: 'Resource Group'
-    azureResourceManagerConnection: 'copy-connection'
-    subscriptionId: '00000000-0000-0000-0000-000000000000'
+    azureResourceManagerConnection: 'Azurepipeline-conn'
+    subscriptionId: 'c9367b2c-5d92-4084-bc34-7b70f6092b53'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: 'demogroup'
-    location: 'West US'
+    resourceGroupName: 'bhaskarARM'
+    location: 'East US'
     templateLocation: 'URL of the file'
-    csmFileLink: '$(AzureFileCopy.StorageContainerUri)templates/mainTemplate.json$(AzureFileCopy.StorageContainerSasToken)'
-    csmParametersFileLink: '$(AzureFileCopy.StorageContainerUri)templates/mainTemplate.parameters.json$(AzureFileCopy.StorageContainerSasToken)'
+    csmFileLink: '$(AzureFileCopy.StorageContainerUri)CreateWebAppThroughCopy/azuredeploy.json$(AzureFileCopy.StorageContainerSasToken)'
+    csmParametersFileLink: '$(AzureFileCopy.StorageContainerUri)CreateWebAppThroughCopy/azuredeploy.parameters.json$(AzureFileCopy.StorageContainerSasToken)'
     deploymentMode: 'Incremental'
     deploymentName: 'deploy1'
+    
+  
